--- a/main.css
+++ b/main.css
@@ -7,6 +7,10 @@ html,body{
 	font-family: Helvetica;
 }
 
+h1 {
+	text-align: center;
+}
+
 .main-container{
 	width: 100%;
 }
@@ -18,32 +22,49 @@ html,body{
 }
 
 .roi-section h2{
-	color: white;
 	text-align: center;
+}
+
+.market, .agents, .comp-structure, .output {
+	background-size: cover;
+}
+
+.market, .agents, .comp-structure {
+	width: 33.333%;
+	float:left;
+}
+
+.overlay {
+	background-color: rgba(255, 255, 255, .5);
+	height: 100%;
+	width: 100%;
+}
+
+.overlay:first-child {
+	margin-top: 0;
+	padding-top: 1em;
 }
 
 /* Containers for each section */
 .market{
-	background-color: red;
-	width: 33.333%;
-	float:left;
+	background-image: url("img/market.jpeg");
 }
 
 .agents{
-	background-color: green;
-	width: 33.333%;
-	float:left;
+	background-image: url("img/team.jpeg");
 }
 
 .comp-structure{
-	background-color: blue;
-	width: 33.333%;
-	float:left;
+	background-image: url("img/financials.jpeg");
+}
+
+.big-submit-button {
+	clear: both;
 }
 
 .output{
+	background-image: url("img/roi.jpeg");
 	height: 100%;
-	background-color: gray;
 	clear: left;
 }
 
